--- a/docs/newcss.css
+++ b/docs/newcss.css
@@ -244,7 +244,8 @@ body {
 }
 
     .columnheader li {
-      display: inline-block;
+    /*  display: inline-block;*/
+    float:left;
     }
 .columnheaderheading {
   
